--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -504,6 +504,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
+								<div class="p-sale wrap-line">120,189,000đ - 220,195,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -524,6 +525,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
+								<div class="p-sale wrap-line">120,189,000đ</div>
 								<a href="#" class="btn btn-view">Tìm hiểu thêm</a>
 							</div>
 						</div>
@@ -537,6 +539,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
+								<div class="p-sale wrap-line">220,195,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -557,6 +560,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
+								<div class="p-sale wrap-line">120,189đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -577,6 +581,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
+								<div class="p-sale wrap-line">120,189,000đ - 220,195,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -597,6 +602,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
+								<div class="p-sale wrap-line">120,189,000đ - 220,195,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -627,8 +633,8 @@
 		<div class="ads margin-b20">
 			<div class="content-wrapper container bg-white pad-20 br-8">
 				<div class="row">
-					<div class="col-xs-6"><img src="../../assets/images/new-design/ads-1.jpg"></div>
-					<div class="col-xs-6"><img src="../../assets/images/new-design/ads-1.jpg"></div>
+					<div class="col-xs-6"><img class="br6" src="../../assets/images/new-design/ads_2.jpg"></div>
+					<div class="col-xs-6"><img class="br6" src="../../assets/images/new-design/ads_3.jpg"></div>
 				</div>
 			</div>
 		</div>
