--- a/3B-NEW/seller-discount-add.html
+++ b/3B-NEW/seller-discount-add.html
@@ -280,13 +280,13 @@
 											<div class="col-md-6">
 												<div class="input-group">
 													<div class="input-group-addon"><i class="fa fa-clock-o"></i></div>
-													<input size="16" type="text" class="form-control" id="start_date">
+													<input size="16" type="text" class="form-control " id="start_date">
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="input-group">
 													<div class="input-group-addon"><i class="fa fa-clock-o"></i></div>
-													<input size="16" type="text" class="form-control" id="end_date">
+													<input size="16" type="text" class="form-control " id="end_date">
 												</div>
 											</div>
 										</div>
@@ -325,6 +325,8 @@
 	<script src="assets/plugins/daterangepicker/moment.js"></script>
 	<script src="assets/plugins/daterangepicker/datetimepicker.min.js"></script>
 	<script src="assets/plugins/select2/select2.full.min.js"></script>
-	<script src="assets/js/base.js"></script>
+	<script src="assets/js/base.min.js"></script>
+
+	
 </body>
 </html>
