3B - update style home PC

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -765,20 +765,21 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name custom-w75">
+									<div class="store-name">
 										<img src="../../assets/images/img30.jpg">
 										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-									</div>
-									<div class="rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
 									<span class="p-price wrap-line">1,189,000đ - 2,195,000đ</span>
 								</div>
-								<div class="p-price sale wrap-line">120,189,000đ - 220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">120,189,000đ - 220,195,000đ</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -792,20 +793,21 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name custom-w75">
+									<div class="store-name">
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
-									</div>
-									<div class="rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
 									<span class="p-price wrap-line">122.125.000 đ</span>
 								</div> 
-								<div class="p-price sale wrap-line">220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">220,195,000đ</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -819,20 +821,21 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name custom-w75">
+									<div class="store-name">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Tên cửa hàng siêu ngắn</h5>
-									</div>
-									<div class="rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
 									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
 								</div>
-								<div class="p-price sale wrap-line">120,189,000đ - 220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">120,189,000đ - 220,195,000đ</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -846,20 +849,21 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name custom-w75">
+									<div class="store-name">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Tên</h5>
-									</div>
-									<div class="rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ dài</h4></a>
 									<span class="p-price">1.125.000 đ</span>
 								</div>
-								<div class="p-price sale wrap-line">220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">220,195,000đ</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -873,20 +877,21 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name custom-w75">
+									<div class="store-name">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Superrrr</h5>
-									</div>
-									<div class="rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
 									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
 								</div>
-								<div class="p-price sale wrap-line">120,189,000đ - 220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">120,189,000đ - 220,195,000đ</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -900,20 +905,21 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name custom-w75">
+									<div class="store-name">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Superrrr Saleeeee</h5>
-									</div>
-									<div class="rating">
-										<img src="../../assets/images/new-design/icons/star.png">
-										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
 									<span class="p-price wrap-line">125.000 đ</span>
 								</div>
-								<div class="p-price sale wrap-line">220,189,đ</div>
+								<div class="p-price sale wrap-line margin-b3">220,189,đ</div>
+								<div class="rating">
+									<img src="../../assets/images/new-design/icons/star.png">
+									<span class="point">4.0</span>
+									<span class="count">(200 ratings)</span>
+								</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
