--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -504,7 +504,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
-								<div class="p-sale wrap-line">120,189,000đ - 220,195,000đ</div>
+								<div class="p-sale wrap-line">120,189,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -581,7 +581,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
-								<div class="p-sale wrap-line">120,189,000đ - 220,195,000đ</div>
+								<div class="p-sale wrap-line">120,189,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -602,7 +602,7 @@
 							</a>
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
-								<div class="p-sale wrap-line">120,189,000đ - 220,195,000đ</div>
+								<div class="p-sale wrap-line">120,189,000đ</div>
 								<div class="product-sold">
 									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
@@ -772,9 +772,9 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price wrap-line">1,189,000đ - 2,195,000đ</span>
+									<span class="p-price wrap-line">1,189,000đ</span>
 								</div>
-								<div class="p-price sale wrap-line margin-b3">120,189,000đ - 220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">120,189,000đ</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
 									<span class="point">4.0</span>
@@ -828,9 +828,9 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
-									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
+									<span class="p-price wrap-line">100,189,000đ</span>
 								</div>
-								<div class="p-price sale wrap-line margin-b3">120,189,000đ - 220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">120,189,000đ</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
 									<span class="point">4.0</span>
@@ -884,9 +884,9 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
-									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
+									<span class="p-price wrap-line">100,189,000đ</span>
 								</div>
-								<div class="p-price sale wrap-line margin-b3">120,189,000đ - 220,195,000đ</div>
+								<div class="p-price sale wrap-line margin-b3">120,189,000đ</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
 									<span class="point">4.0</span>
@@ -1017,7 +1017,7 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-									<span class="p-price wrap-line">1,189,000đ - 2,195,000đ</span>
+									<span class="p-price wrap-line">1,189,000đ </span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1071,7 +1071,7 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
-									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
+									<span class="p-price wrap-line">100,189,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
@@ -1125,7 +1125,7 @@
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
-									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
+									<span class="p-price wrap-line">100,189,000đ</span>
 								</div>
 								<div class="rating">
 									<img src="../../assets/images/new-design/icons/star.png">
