--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -253,14 +253,7 @@
 							</a>
 							<div class="p-info">
 								<h4 class="p-price">125,000 đ</h4>
-								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
-									<div class="progress">
-										<div class="progress-bar" style="width: 30%;">
-											<span class="sr-only">Đã bán: 10/30</span>
-										</div>
-									</div>
-								</div>
+								<a href="#" class="btn btn-view">Tìm hiểu thêm</a>
 							</div>
 						</div>
 						<div class="item">
